--- a/WebPage/css/style.css
+++ b/WebPage/css/style.css
@@ -58,3 +58,21 @@ td.details-control {
 tr.shown td.details-control {
     background: url('../img/details_close.png') no-repeat center center;
 }
+
+.node circle {
+    cursor: pointer;
+    fill: #fff;
+    stroke: steelblue;
+    stroke-width: 1.5px;
+}
+
+text.node {
+    font-size: 13px;
+    fill: #000;
+}
+
+path.link {
+    fill: none;
+    stroke: #ccc;
+    stroke-width: 1.5px;
+}
