--- a/WebPage/css/style.css
+++ b/WebPage/css/style.css
@@ -61,8 +61,9 @@ tr.shown td.details-control {
 
 .node circle {
     cursor: pointer;
-    fill: #fff;
-    stroke: steelblue;
+    fill: #eee;
+    /*    stroke: steelblue;*/
+    
     stroke-width: 1.5px;
 }
 
